--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://rishi-ally.github.io/MyPortfolio-website/", 
+  "homepage": "https://rishi-ally.github.io/MyPortfolio",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview",
-   "predeploy": "npm run build",
-   "clean": "rimraf dist",
-
-  "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "clean": "rimraf dist" 
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -20,6 +19,7 @@
     "avataaars": "^2.0.0",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -38,6 +38,6 @@
     "eslint-plugin-react-refresh": "^0.4.13",
     "gh-pages": "^6.2.0",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.10"
   }
 }
